Fela Kútì Tribute Page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="img-div">
           <img
             id="image"
-            src="/images/felakuti.jpg"
+            src="images/felakuti.jpg"
             alt="Fela Kuti"
             max-width="100%"
             height="auto" />
