--- a/index.html
+++ b/index.html
@@ -102,14 +102,19 @@
         </ul>
         <blockquote>
           <p>I want peace. Happiness. Not only for myself. For everybody.</p>
-          <cite>- Fela Kútì</cite>
+          <cite>-Fela Kútì</cite>
         </blockquote>
-        <a
-          id="tribute-link"
-          href="https://en.wikipedia.org/wiki/Fela_Kuti"
-          target="_blank"
-          >Learn more about Fela Aníkúlápó Kútì</a
-        >
+
+        <p>
+          If you have time, you should read more about this incredible human
+          being on his
+          <a
+            id="tribute-link"
+            href="https://en.wikipedia.org/wiki/Fela_Kuti"
+            target="_blank"
+            >Wikipedia entry</a
+          >
+        </p>
       </section>
     </main>
   </body>
